# gtk_playground

./: CMakeLists.txt  README.md  test_gui.glade
src/: test_gui.c
